# Shelly-Remote-Helper

./: .gitlab-ci.yml  Cargo.toml  README.md  TODO.md
doc/: crates.js  help.html  settings.html  source-files.js
doc/shelly_remote_helper/: all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
doc/shelly_remote_helper/action/: fn.list.html  fn.setup.html  fn.start.html  fn.stop.html  index.html  sidebar-items.js
doc/shelly_remote_helper/debugger/: fn.debug.html  index.html  sidebar-items.js
doc/shelly_remote_helper/file_checker/: index.html  sidebar-items.js  struct.FileChecker.html
doc/shelly_remote_helper/logger/: index.html  sidebar-items.js  struct.LogMessage.html  struct.Logger.html
doc/shelly_remote_helper/service/: index.html  sidebar-items.js
doc/shelly_remote_helper/service/shelly_rest_api/: fn.save_script_to_shelly.html  index.html  sidebar-items.js  static.JS_STOP_FUNCTION.html  struct.Chunk.html  struct.ClientRequestError.html  struct.InternalServerError.html  struct.ParseError.html  struct.ParseScriptsInfo.html  struct.Script.html  struct.Shelly.html
doc/shelly_remote_helper/service/vscode_tasks/: index.html  sidebar-items.js  struct.Presentation.html  struct.RunOptions.html  struct.SetupVsCode.html  struct.Task.html  struct.Tasks.html
src/: action.rs  debugger.rs  file_checker.rs  logger.rs  main.rs
src/service/: mod.rs  shelly_rest_api.rs  vscode_tasks.rs
