[package]
name = "shelly_remote_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.10.0"
filetime = "0.2.22"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
digest_auth = "0.3.1"
diqwest = { version = "1.2.1", features = ["blocking"] }
